created thread-local runtime context with global spawn function. updated scheduler to also handle additional tasks. can now spawn mutliple tasks within the main task. fixed issue with incrementing ID count

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,8 @@ Minimal asynchronous runtime for exploring `async` Rust.
 categories = ["asynchronous", "network-programming"]
 keywords = ["io", "async", "non-blocking", "futures"]
 
+[profile.dev]
+opt-level = 0
+debug = true
+
 [dependencies]
