--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ license = "MIT"
 readme = "README.md"
 repository = "https://github.com/hmunye/rio"
 description = """
-Minimal asynchronous runtime for exploring `async` Rust.
+Minimal, single-threaded, asynchronous runtime in Rust.
 """
 categories = ["asynchronous"]
 keywords = ["async", "non-blocking", "futures"]
@@ -16,6 +16,5 @@ keywords = ["async", "non-blocking", "futures"]
 libc = { version = "0.2.176", optional = true }
 
 [features]
-# Include nothing by default
 default = []
 io = ["libc"]
